<resources>
    <string name="app_name">فاکتور فروش</string>
    <string name="company_name">شرکت برق منطقه ای</string>
    <string name="user_name">نام کاربری</string>
    <string name="enter">ورود</string>
    <string name="remember_me">مرا به خاطر بسپار</string>
    <string name="forgot_password">فراموشی رمز عبور</string>
    <string name="version">"نسخه "</string>
    <string name="home">صفحه اصلی</string>
    <string name="reports">گزارشات</string>
    <string name="operation">عملیات</string>
    <string name="base_information">اطلاعات پایه</string>
    <string name="warehouse_handling">انبارگردانی</string>
    <string name="no_data">داده ای برای نمایش وجود ندارد</string>
    <string name="press_again_to_exit">برای خروج یکبار دیگر کلیک کنید</string>
    <string name="no_internet">دستگاه به اینترنت متصل نیست</string>
    <string name="warehouse_system_management">سیستم مدیریت انبار</string>
    <string name="response_error_all">"به یکی از دلایل زیر امکان برقراری ارتباط مقدور نمی باشد\n 1. دستگاه فاقد ارتباط اینترنتی میباشد. \n 2. سرور در دسترس نمی باشد. \n 3. خطایی در سرور یا برنامه رخ داده است."</string>
    <string name="internal_server_error">خطایی در سرور رخ داده است.. با پشتیبانی تماس حاصل فرمایید.</string>
    <string name="warehouse">انبار</string>
    <string name="document_type">نوع مدرک</string>
    <string name="goods_code">کد کالا</string>
    <string name="goods_description">شرح کالا :</string>
    <string name="goods_unit">واحد کالا</string>
    <string name="count">تعداد :</string>
    <string name="save">ذخیره</string>
    <string name="cancel">انصراف</string>
    <string name="serial_number">شماره سریال</string>
    <string name="count1">تعداد</string>
    <string name="reusable">قابلیت استفاده مجدد</string>
    <string name="success_operation">عملیات با موفقیت انجام شد</string>
    <string name="add_goods">افزودن کالا</string>
    <string name="edit_goods">ویرایش کالا</string>
    <string name="fill_all_blanks">مقادیر معتبر وارد نمایید</string>
    <string name="error_operation">خطا در انجام عملیات</string>
    <string name="serial_number1">شماره سریال :</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="warning">هشدار</string>
    <string name="are_you_sure_delete_item">آیا از حذف آیتم مطمئن هستید ؟</string>
    <string name="error">خطا</string>
    <string name="invalid_user_pass">نام کاربری / رمز عبور اشتباه است</string>
    <string name="response_error">خطا در دریافت اطلاعات</string>
    <string name="do_you_want_exit">آیا قصد خارج شدن از برنامه رو دارید؟</string>
    <string name="exit">خروج</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="individual">انفرادی</string>
    <string name="group">گروهی</string>
    <string name="serial_number_from">شماره سریال از</string>
    <string name="serial_number_to">شماره سریال تا</string>
    <string name="do_search">جستجو کنید...</string>
    <string name="fill_search_key">کلمه جستجو را وارد کنید..</string>
    <string name="warehouse1">انبار :</string>
    <string name="set_permission_for_doing_operation">برای انجام ادامه عملیات، دسترسی های لازم را اعطا فرمایید.</string>
    <string name="scan_barcode">بارکد مورد نظر را اسکن کنید</string>
    <string name="document_number">شماره مدرک</string>
    <string name="date_document">تاریخ مدرک</string>
    <string name="place">امور</string>
    <string name="work_order_number">شماره دستور کار</string>
    <string name="project_code">کد پروژه</string>
    <string name="customer_code">کد طرف حساب</string>
    <string name="contract">قرارداد</string>
    <string name="error_personnel_information">اطلاعات پرسنلی شما کامل نیست.. لطفا مجددا لاگین کنید یا با راهبر سیستم تماس حاصل فرمایید</string>
    <string name="choose_work_order_at_first">ابتدا شماره دستور کار را انتخاب کنید</string>
    <string name="choose_customer_at_first">ابتدا کد طرف حساب را انتخاب نمایید</string>
    <string name="add">افزودن</string>
    <string name="failure_operation">عملیات ناموفق بود</string>
    <string name="related_warehouse">انبار مرتبط</string>
    <string name="related_document">مدرک مرتبط</string>
    <string name="consumer_code">کد معین مصرف</string>
    <string name="focus">تمرکز</string>
    <string name="weigh_bridge_number_date">شماره و تاریخ باسکول</string>
    <string name="description">توضیحات</string>
    <string name="choose_related_document_first">ابتدا مدرک مرتبط را انتخاب کنید</string>
    <string name="no_access">شما دسترسی لازم را ندارید</string>
    <string name="wait">لطفا منتظر بمانید</string>
    <string name="set_permission">اعطاای مجوز</string>
    <string name="personnel_information">اطلاعات پرسنلی</string>
    <string name="goods_name">نام کالا</string>
    <string name="detail">جزئیات</string>
    <string name="ok">تایید</string>
    <string name="authorization">احراز هویت</string>
    <string name="user_full_name">نام کاربر :</string>
    <string name="personnel_code">کد پرسنلی :</string>
    <string name="phone_number">شماره همراه :</string>
    <string name="send_active_code">ارسال کد فعالسازی</string>
    <string name="register_title">در صورت تایید موارد فوق دکمه ارسال کد فعالسازی را بزنید تا کد فعالسازی به شماره شما ارسال گردد. در غیر اینصورت از طریق راهبر سیستم موارد فوق را اصلاح و مجددا اقدام فرمایید.</string>
    <string name="enter_register_code">کد ارسال شده را وارد نمایید</string>
    <string name="resend">ارسال مجدد</string>
    <string name="default_waiting_time">2 : 00</string>
    <string name="no_valid_device_information">اطلاعات دستگاه شما معتبر نیست</string>
    <string name="wrong_code">کد اشتباه است</string>
    <string name="error_registeration">خطا در عملیات احراز هویت.. با پشتیبانی تماس بگیرید</string>
    <string name="plugin_detection">Plugin Detection</string>
    <string name="root_detection">Root Detection</string>
    <string name="emulator_detection">Emulator Detection</string>
    <string name="reverse_engineering_tools_detection">RE Tools Detection</string>
    <string name="parallel_space_app_exist">برنامه های  ParallelSpace</string>
    <string name="your_device_is_root">برنامه به دلیل Root بودن دستگاه شما قادر به پاسخگویی نمی باشد.</string>
    <string name="app_not_run_on_emulator">امکان اجرای برنامه برروی دستگاه های شبیه ساز وجود ندارد.</string>
    <string name="is_exist_reverse_engineering_tools">برنامه به دلیل وجود اپلیکیشن های غیرامن و مخرب برروی دستگاه شما قادر به پاسخگویی نمی باشد.</string>
    <string name="security_problem">برنامه به دلیل مشکلات امنیتی دستگاه شما قادر به پاسخگویی نمی باشد.</string>
    <string name="plugin_exist_on_device">برنامه به دلیل وجود اپلیکیشن های غیرامن (و یا استفاده از ابزارهای غیرامن)  روی دستگاه شما، قادر به پاسخگویی نمی باشد.</string>
    <string name="is_exist_parallel_space_app">به دلیل وجود اپلیکیشن های مخرب برروی گوشی شما، برنامه قادر به پاسخگویی نمی باشد.</string>
    <string name="access">دسترسی</string>
    <string name="set_permission_for_authorization">برای انجام عملیات احراز هویت لطفا دسترسی های لازم را عطا فرمایید</string>
    <string name="enter_data">اطلاعات خود را وارد نمایید</string>
    <string name="enter_username">نام کاربری خود را وارد کنید</string>
    <string name="send_password">ارسال</string>
    <string name="send_password_your_number">رمز عبور به شماره شما ارسال میگردد.</string>
    <string name="no_crash_recorded">خطایی ثبت نشده است</string>
    <string name="error_finish_time">زمان استفاده از برنامه به پایان رسیده... مجددا لاگین کنید</string>
    <string name="insecure_path">برنامه به دلیل ارتباط ناامن، قادر به پاسخگویی نمی باشد.\n برای استفاده از امکانات اپلیکیشن، اجتناب از راه اندازی برنامه های ناامن ضروری است.</string>
    <string name="new_version">نسخه جدید</string>
    <string name="new_version_exist_cafe_bazaar">نسخه جدید موجود است\nبرنامه روی کافه بازار منتشر شده.. اگر اپلیکیشن کافه بازار روی گوشی شما نصب نیست آن را نصب کنید.</string>
    <string name="install_new_version">نصب نسخه جدید</string>
    <string name="active_code_sent_again">کد فعال سازی مجددا ارسال شد.</string>
    <string name="error_registration">خطا در عملیات احراز هویت.. با پشتیبانی تماس بگیرید</string>
    <string name="resend_activation_code">ارسال مجدد کد فعالسازی</string>
    <string name="description_waiting_activation_code">لطفا تا رسیدن کد فعالسازی شکیبا باشید. \nدرصورت عدم دریافت کد، با راهبر سیستم تماس حاصل فرمایید.</string>
    <string name="my_devices">دستگاه های من</string>
    <string name="my_profile">پروفایل من</string>
    <string name="change_password">تغییر رمز عبور</string>
    <string name="my_notifications">پیام های من</string>
    <string name="security_settings">تنظیمات امنیتی</string>
    <string name="reminder">یادآور</string>
    <string name="settings">تنظیمات</string>
    <string name="report_bug">گزارش خطا</string>
    <string name="login_page">صفحه ورود به برنامه</string>
    <string name="number">شماره :</string>
    <string name="phone">گوشی :</string>
    <string name="in_next_version">در نسخه های بعدی</string>
    <string name="current_password">رمز عبور جاری</string>
    <string name="new_password">رمز عبور جدید</string>
    <string name="confirm_password">تکرار رمز عبور</string>
    <string name="enter_bug_description">لطفا خطای رخ داده را شرح دهید</string>
    <string name="send_report">ارسال گزارش</string>
    <string name="sent_your_report_thanks">گزارش شما به تیم فنی ارسال شد. از همکاری شما سپاسگزاریم.</string>
    <string name="close">بستن</string>
    <string name="edit">ویرایش</string>
    <string name="no_date">بدون تاریخ</string>
    <string name="new_version_exist_caffe_bazaar">نسخه جدید اپلیکیشن در کافه بازار موجود است.\nلطفا نصب کنید.</string>
    <string name="error_post_unhandledException">در ارسال خطا مشکلی پیش آمده.. با راهبر سیستم تماس حاصل فرمایید</string>
    <string name="document_number_is_empty">شماره مدرک خالی است.. با پشتیبانی تماس بگیرید</string>
    <string name="sub_goods">ریزجزئیات کالا</string>
    <string name="customer_title">عنوان طرف حساب :</string>
    <string name="customer_class">طبقه طرف حساب :</string>
    <string name="customer_parent_code">کد والد :</string>
    <string name="registered_date">تاریخ ایجاد :</string>
    <string name="last_update_date">تاریخ آخرین بروزرسانی :</string>
    <string name="update">بروزرسانی</string>
    <string name="error_read_certificate">خواندن اطلاعات با خطا مواجه شد. از معتبر بودن فایل اطمینان حاصل فرمایید</string>
    <string name="register_sale_factor">ثبت فاکتور فروش</string>
    <string name="did_not_register_yet">ثبت نام نکرده اید؟</string>
    <string name="register">ثبت نام</string>
    <string name="error_certificate_file">فایل \'cer\' معتبر نیست، لطفا از قسمت ثبت نام جدد فایل را بارگذاری نمایید.</string>


</resources>
