<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/guide_line">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.49" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.51" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/guide_line" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guide_line" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDocumentNo"
            style="@style/MaterialTextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_center_right">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDocumentNo"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/document_number"
                android:inputType="number"
                android:textAlignment="center" />
            <requestFocus/>
        </com.google.android.material.textfield.TextInputLayout>

        <ir.awlrhm.modules.view.DatePicker
            android:id="@+id/dvDocument"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:dp_border="@drawable/border_primary"
            app:dp_hint="@string/choose"
            app:dp_title="@string/date_document"
            app:dp_titleColor="@color/colorPrimary"
            app:layout_constraintEnd_toStartOf="@id/guideline_center_left"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spRelatedDocument"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tilDocumentNo"
            app:sp_border="@drawable/border_primary"
            app:sp_hint="@string/choose"
            app:sp_title="@string/related_document"
            app:sp_titleColor="@color/colorPrimary" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spRelatedWarehouse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/spRelatedDocument"
            app:sp_border="@drawable/border_primary"
            app:sp_hint="@string/choose"
            app:sp_title="@string/related_warehouse"
            app:sp_titleColor="@color/colorPrimary" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spPlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/spRelatedWarehouse"
            app:sp_border="@drawable/border_primary"
            app:sp_hint="@string/choose"
            app:sp_title="@string/place"
            app:sp_titleColor="@color/colorPrimary" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spWorkOrderNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/spPlace"
            app:sp_border="@drawable/border_primary"
            app:sp_hint="@string/choose"
            app:sp_title="@string/work_order_number"
            app:sp_titleColor="@color/colorPrimary" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spProject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/spWorkOrderNo"
            app:sp_border="@drawable/border_primary"
            app:sp_hint="@string/choose"
            app:sp_title="@string/project_code"
            app:sp_titleColor="@color/colorPrimary" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spAccountingCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/spProject"
            app:sp_border="@drawable/border_primary"
            app:sp_hint="@string/choose"
            app:sp_title="@string/consumer_code"
            app:sp_titleColor="@color/colorPrimary" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spCustomer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/spAccountingCode"
            app:sp_border="@drawable/border_primary"
            app:sp_hint="@string/choose"
            app:sp_title="@string/customer_code"
            app:sp_titleColor="@color/colorPrimary" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spContract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/spCustomer"
            app:sp_border="@drawable/border_primary"
            app:sp_hint="@string/choose"
            app:sp_title="@string/contract"
            app:sp_titleColor="@color/colorPrimary" />

        <ir.awlrhm.modules.view.Spinner
            android:id="@+id/spFocus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/spContract"
            app:sp_border="@drawable/border_primary"
            app:sp_hint="@string/choose"
            app:sp_title="@string/focus"
            app:sp_titleColor="@color/colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWeighBridgeNo"
            style="@style/MaterialTextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/spFocus"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtWeighBridgeNo"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weigh_bridge_number_date"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            style="@style/MaterialTextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tilWeighBridgeNo"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDescription"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>