<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/onSurface"
        android:padding="@dimen/guid_line"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblUserFullName"
            style="@style/LabelTitleStyle"
            android:layout_marginTop="0dp"
            android:text="@string/user_full_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtUserFullName"
            style="@style/TextTitleStyle"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toStartOf="@id/lblUserFullName"
            app:layout_constraintTop_toTopOf="@id/lblUserFullName" />

        <TextView
            android:id="@+id/lblPersonnelCode"
            style="@style/LabelTitleStyle"
            android:text="@string/personnel_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblUserFullName" />

        <TextView
            android:id="@+id/txtPersonnelCode"
            style="@style/TextTitleStyle"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toStartOf="@id/lblPersonnelCode"
            app:layout_constraintTop_toTopOf="@id/lblPersonnelCode" />

        <TextView
            android:id="@+id/lblPhoneNumber"
            style="@style/LabelTitleStyle"
            android:text="@string/phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblPersonnelCode" />

        <TextView
            android:id="@+id/txtPhoneNumber"
            style="@style/TextTitleStyle"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toStartOf="@id/lblPhoneNumber"
            app:layout_constraintTop_toTopOf="@id/lblPhoneNumber" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guid_line" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guid_line" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutSendCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:visibility="visible">

        <TextView
            android:id="@+id/lblRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8dp"
            android:text="@string/register_title"
            android:textColor="@color/black"
            android:textSize="@dimen/textAppearanceSubtitle2"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendRegisterCode"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/send_active_code"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textAppearanceSubtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblRegister" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutRegisterCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        android:visibility="gone">

        <TextView
            android:id="@+id/lblRegisterCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textAppearanceSubtitle2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/enter_register_code"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegisterCode"
            style="@style/MaterialTextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="?android:textColorSecondary"
            app:layout_constraintTop_toBottomOf="@+id/lblRegisterCode">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtRegisterCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/textAppearanceHeadline5"
                android:inputType="number"
                android:maxLength="6" />
            <requestFocus/>
        </com.google.android.material.textfield.TextInputLayout>


        <FrameLayout
            android:id="@+id/layoutTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tilRegisterCode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/txtTimeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red_800"
                android:textSize="@dimen/textAppearanceSubtitle1"
                android:layout_gravity="center"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnResendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/borderlessButtonStyle"
                android:text="@string/resend"
                android:visibility="invisible"/>
        </FrameLayout>

        <ProgressBar
            android:id="@+id/prcRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tilRegisterCode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>